--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-29  Antti Koivisto  <antti@apple.com>
+
+        Reviewed by Maciej.
+        
+        Some SPIs for media support.
+
+        * WebCoreSupport/WebSystemInterface.m:
+        (InitWebCoreSystemInterface):
+
 2007-10-29  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by John Sullivan.
