Another Qt/GTK build fix.
        * bindings/js/JSHTMLElementWrapperFactory.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27282 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-30  Antti Koivisto  <antti@apple.com>
 
+        Another Qt/GTK build fix.
+
+        * bindings/js/JSHTMLElementWrapperFactory.cpp:
+
+2007-10-30  Antti Koivisto  <antti@apple.com>
+
         Attempt to fix Qt/GTK build.
 
         * WebCore.pro:
