Reviewed by Adam Roben, Sam Weinig.
        Made conflicts in grammar.y a persistent build failure.

        * DerivedSources.make:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27289 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-30  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Adam Roben, Sam Weinig.
+        
+        Made conflicts in grammar.y a persistent build failure.
+
+        * DerivedSources.make:
+
 2007-10-30  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Adam and Geoff.
