--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,15 @@
+2007-10-30  Adam Roben  <aroben@apple.com>
+
+        Windows build fixes
+
+        I'm not completely sure why these const issues weren't caught by GCC,
+        but MSVC was certainly not happy with them.
+
+        * editing/IndentOutdentCommand.cpp:
+        (WebCore::isIndentBlockquote):
+        * editing/markup.cpp:
+        (WebCore::styleFromMatchedRulesAndInlineDecl):
+
 2007-10-30  David Hyatt  <hyatt@apple.com>
 
         transition-property was defaulting to all when it should default to none.  
